--- a/main.sass
+++ b/main.sass
@@ -5,3 +5,70 @@
 //
 // Copyright (C) 2012 Nikolay Nemshilov
 //
+
+// reset
+
+div.analog-clock, div.analog-clock *
+  margin:     0
+  padding:    0
+  border:     none
+  background: none
+  float:      none
+  clear:      none
+  position:   static
+  display:    inline-block
+
+
+div.analog-clock
+  position:         relative
+  width:            16em
+  height:           16em
+  border:           1em solid rgba(0,0,0,.4)
+  border-radius:    50%
+  background-color: rgba(255,255,255,.5)
+
+  label
+    font-size:   1.6em
+    font-family: helvetica, verdana, serif
+    position:    absolute
+
+    &:nth-of-type(1), &:nth-of-type(11)
+      top:   11%
+
+    &:nth-of-type(1), &:nth-of-type(5)
+      right: 27%
+
+    &:nth-of-type(2), &:nth-of-type(10)
+      top:   25%
+
+    &:nth-of-type(2), &:nth-of-type(4)
+      right: 13%
+
+    &:nth-of-type(3), &:nth-of-type(9)
+      top:   45%
+
+    &:nth-of-type(4), &:nth-of-type(8)
+      bottom: 25%
+
+    &:nth-of-type(5), &:nth-of-type(7)
+      bottom: 11%
+
+    &:nth-of-type(7), &:nth-of-type(11)
+      left: 26%
+
+    &:nth-of-type(8), &:nth-of-type(10)
+      left: 11%
+
+    &:nth-of-type(3)
+      right: 5%
+
+    &:nth-of-type(6)
+      bottom: 5%
+      left:   47%
+
+    &:nth-of-type(9)
+      left: 5%
+
+    &:nth-of-type(12)
+      top: 5%
+      left: 44%
