Adding some visual effects to the arrow movements

--- a/main.sass
+++ b/main.sass
@@ -293,6 +293,7 @@ div.analog-clock
     height:        .2em
     margin-top:   -.1em
     border-radius: .5em
+    -webkit-transition: -webkit-transform .3s
 
     &:after
       content:       ' '
