Adding ability to specify custom labels

--- a/main.sass
+++ b/main.sass
@@ -30,15 +30,16 @@ div.analog-clock
   text-align:       center
   box-shadow:       0px 0px .25em inset
 
-  &:before
-    content:   'lovely.io'
+  label
     position:  relative
     z-index:   1
-    font-size: 50%
-    color:     rgba(0,0,0,.2)
-    top:       25%
+    font-size: 90%
+    color:     rgba(0,0,0,.3)
+    top:       26%
 
-  label
+  // clock numbers
+
+  span
     font-size:   1em
     font-family: helvetica, verdana, serif
     position:    absolute
